# Python_For_Data_Science

Piscine_0/ex05/: building.py
Piscine_0/ex07/: sos.py
Piscine_1/ex00/: give_bmi.py  tester.py
Piscine_1/ex01/: array2D.py  tester.py
Piscine_1/ex03/: load_image.py  zoom.py
Piscine_1/ex04/: load_image.py  rotate.py
Piscine_1/ex05/: load_image.py  pimp_image.py  tester.py
Piscine_2/ex00/: load_csv.py  tester.py
Piscine_2/ex01/: aff_life.py  load_csv.py
Piscine_2/ex02/: aff_pop.py  load_csv.py  population_total.csv
Piscine_2/ex03/: income_per_person_gdppercapita_ppp_inflation_adjusted.csv  life_expectancy_years.csv  load_csv.py  message.txt  projection_life.py
Piscine_3/ex00/: S1E9.py  tester.py
Piscine_3/ex02/: DiamondTrap.py  S1E7.py
Piscine_3/ex03/: ft_calculator.py
Piscine_3/ex04/: ft_calculator.py
Piscine_4/ex00/: statistics.py
Piscine_4/ex01/: in_out.py  tester.py
Piscine_4/ex02/: callLimit.py  tester.py
Piscine_4/ex03/: new_student.py  tester.py
Python 0/ex00/: Hello.py
Python 0/ex01/: format_ft_time.py
Python 0/ex02/: find_ft_type.py
Python 0/ex03/: NULL_not_found.py
Python 0/ex04/: tester.py  whatis.py
Python 0/ex05/: building.py
Python 0/ex06/: filterstring.py  ft_filter.py
Python 0/ex07/: sos.py
Python 0/ex08/: Loading.py
Python for Data Science/ex04/: whatis.py
Python for Data Science/ex06/: filterstring.py
Python for Data Science/ex08/: tester.py
Python for Data Science/ex09/ft_package/: pyproject.toml
Python_work/ex00/: Hello.py
Python_work/ex03/: NULL_not_found.py
Python_work/ex04/: tester.py
(+7 files in other folders)
